Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Added event on_myinfo for RPL_MYINFO (numeric 004).
    * Raw hooks now take hook names and support multiple hooks. This changes
      rchook_add and rchook_del.
    * Vim modelines must be at the bottom of files. Modules updated.
    * Renamed Lib::Users to Core::IRC::Users.
    * Added Lib::Users, for network-wide user tracking. This brings many new
      possibilities to modules, including an account system.
    * Added hook on_namesreply.
    * All data related to a network is now deleted on disconnect.
    * Added hook on_disconnect.
    * Added various options to bin/auto, including support for multiple config
      files. See bin/auto -h for details.
    * Changed on_nick, on_quit, on_part, and on_kick source hashrefs to include
      server, removing svr.
    * Bumped minimum API version to 3.0.0a7.
    * Fixed the arguments on_whoreply passes.

3.0 Alpha 6
===============================================================================
    * Bug fix: Fixed an issue with SASL timeout.
    * Added hook on_capack.
    * CAP is now core.
    * Fixed a bug with multi-prefix support.
    * Added fpfmt() to API::Std.
    * Auto::GR renamed to $Auto::VERGITREV.
    * Bumped minimum version for API to 3.0.0a6.
    * Changed on_topic args to: full source hashref, new topic array
    * on_topic is now triggered for any topic change, regardless of source.
    * Now parsing numeric 004.
    * Added hook on_isupport.
    * Added a BotStats module for returning statistics about the bot.
    * Now parsing numeric 396.
    * Added who() to API::IRC.
    * Added hook on_whoreply.
    * PRIVMSGs and NOTICEs that would cause a >512 bytes resulting message are
      now divided into multiple messages.
    * Renamed botnick to botinfo.
    * Renamed Parser::IRC to Proto::IRC.